# tablinator

./: .gitignore  CHANGELOG.markdown  LICENCE  Makefile  stack.yaml  tablinator.cabal
engine/: header.sty  pdflatex.template
examples/: junk.markdown
lib/Tablinator/: Nothing.hs  Table.hs
src/: TablinateProgram.hs
tests/: CheckProgram.hs  Experiment.hs  ExperimentRendering.hs  Snippet.hs  hello.lua
