cabal-version:       >= 1.24
name:                tablinator
version:             0.3.1
synopsis:            Render tabular information via Pandoc
license:             BSD3
license-file:        LICENCE
author:              Andrew Cowie <andrew@operationaldynamics.com>
maintainer:          Andrew Cowie <andrew@operationaldynamics.com>
copyright:           © 2014-2017 Operational Dynamics Consulting Pty Ltd, and Others
category:            Text
tested-with:         GHC == 8.0

build-type:          Simple

library
  default-language:  Haskell2010

  build-depends:     base,
                     containers,
                     text,
                     pandoc

  hs-source-dirs:    lib

  exposed-modules:   Tablinator.Nothing
                     Tablinator.Table

  ghc-options:       -O2
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto-top


executable           tablinate
  default-language:  Haskell2010
  buildable:         False

  build-depends:     base,
                     bytestring,
                     containers,
                     pandoc,
                     tablinator

  hs-source-dirs:    src
  main-is:           TablinateProgram.hs

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs
                     -funbox-strict-fields
                     -fno-warn-missing-signatures
                     -fno-warn-unused-binds
                     -fno-warn-unused-do-bind

  ghc-prof-options:  -fprof-auto-top


test-suite           check
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0

  build-depends:     base,
                     bytestring,
                     containers,
                     transformers,
                     mtl,
                     HUnit,
                     hspec,
                     text,
                     tablinator

  hs-source-dirs:    tests
  main-is:           CheckProgram.hs
                      

-- vim: set tabstop=21 expandtab:
